@@ -12,6 +12,10 @@ Please describe any modifications that you made to the package in the
 reverse time order.
 
 	
+Tag: V00-09-24
+2015-5-1 David Schneider
+- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144
+
 Tag: V00-09-23
 2015-2-23 David Schneider
 - update to pdsdata 8.2.4 with EvrDataV4 and present function
